--- a/dmz/dmz1/index.html
+++ b/dmz/dmz1/index.html
@@ -6,6 +6,6 @@
     <title>Practica 1 Sistemas Confiables</title>
 </head>
 <body>
-    <h1>Practica 1 Sistemas Confiables - Este servidor esta en Extranet</h1>
+    <h1>Practica 1 Sistemas Confiables - Este servidor esta en la maquina dmz1</h1>
 </body>
 </html>
